# n8n-desktop-assistant

./: .gitignore  README.md  RELEASE-GUIDE.md  index.html  latest.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  docker-build.yml
docker/: Dockerfile  enterprise-mock.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: hooks.nsh  icon.icns
src-tauri/src/: beautify.rs  config.rs  crypto.rs  docker.rs  enterprise.rs  env.rs  files.rs  i18n.rs  installer.rs  lib.rs  license.rs  main.rs  marketplace.rs  version.rs
src-tauri/templates/: Dockerfile.template  enterprise-mock.js
src/components/: Layout.tsx  LicenseGuard.tsx  TitleBar.tsx
src/components/marketplace/: CommunityNodesTab.tsx  FilterBar.tsx  InstalledTab.tsx  PackageCard.tsx  PackageDetailModal.tsx  WorkflowsTab.tsx  index.ts
src/contexts/: LicenseContext.tsx
src/pages/: About.tsx  Activation.tsx  BeautifyPage.tsx  Dashboard.tsx  EnvironmentCheck.tsx  LicensePage.tsx  Logs.tsx  Marketplace.tsx  Services.tsx  Settings.tsx  VersionManager.tsx  Wizard.tsx
src/services/: marketplace.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: base-command.ts
