[package]
name = "n8n-desktop-assistant"
version = "1.0.0"
description = "n8n Desktop Assistant - 桌面管理助手"
authors = ["n8n"]
license = ""
repository = ""
edition = "2021"
default-run = "n8n-desktop-assistant"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
aes-gcm = "0.10"
hmac = "0.12"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winnt", "impl-default"] }
wmi = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
